<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/add"
          android:title="@string/add"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/camera"
          android:title="@string/camera"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/search"
          android:title="@string/search"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/receive"
          android:title="@string/receive"
          android:showAsAction="ifRoom|withText"/>
    <group android:id="@+id/authenticatedgroup">
        <item android:id="@+id/sync"
              android:title="@string/sync"
              android:onClick="onAuthenticatedItemClick"
              android:showAsAction="ifRoom|withText" />
        <item android:id="@+id/logout"
              android:title="@string/logout"
              android:onClick="onAuthenticatedItemClick"
              android:showAsAction="ifRoom|withText" />
    </group>
    <item android:id="@+id/home"
          android:title="@string/home"
          android:showAsAction="ifRoom|withText"/>
</menu>